Match-id-c8e464e7afbf97e365b07518fe9d9066208a1050

--- a/api/external/export-files.yaml
+++ b/api/external/export-files.yaml
@@ -356,11 +356,12 @@ definitions:
       params:
         type: object
         additionalProperties:
-          type: string
+          type: object
         description: 创建类型参数
     required:
       - type
       - name
+    type: object
   ExportRecordQueryResponse:
     description: 批量查询返回
     properties:
